[package]
name = "wamuu"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = [ "cargo" ] }
filetime = "0.2.20"
indicatif = "0.17.3"
libc = "0.2.139"
log = "0.4.17"

